kustomize/base/policies/require-non-root.yaml
# runAsNonRoot zorunlu
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - platform-test
                - platform-prod
      validate:
        message: "Pod securityContext.runAsNonRoot: true olmalı veya container seviyesinde tanımlı."
        anyPattern:
          - spec:
              securityContext:
                runAsNonRoot: true
          - spec:
              containers:
                - securityContext:
                    runAsNonRoot: true
